Suggested file functionality